# exam_pool

./: .gitignore  FINAL_ORGANIZATION_SUMMARY.md  Makefile  ORGANIZATION_SUMMARY.md  README.md  a_maze_ing.py  config.txt  exam_subjects  exam_subs2  mazegen-0.1.0-py3-none-any.whl  merge_exercises.py  organize_exam_subs2.py  organize_exercises.py  organize_exercises_final.py  organize_exercises_improved.py  organize_exercises_v2.py  process_exam_subs2.py  pyproject.toml
exercises/: aff_b.txt  aff_c.txt  aff_first_param.txt  aff_g.txt  aff_i.txt  aff_j.txt  aff_k.txt  aff_l.txt  aff_last_param.txt  aff_n.txt  aff_p.txt  aff_s.txt  aff_t.txt  aff_u.txt  aff_w.txt  aff_x.txt  base16.txt  count_alen.txt  count_letters.txt  digit_sum.txt  even.txt  first_last_char.txt  ft_itoa.txt  ft_print_numbers.txt  ft_putnbr.txt  ft_putstr.txt  ft_rrange.txt  ft_split.txt  ft_star.txt  ft_strlen.txt  inter.txt  interval_space.txt  is_palindrome.txt  last_word.txt  maff_alpha.txt  nth_char.txt  occ_a.txt  occ_z.txt  odd.txt  rle.txt  (+3 more)
exercises_merged/: aff_a.txt  aff_c.txt  aff_d.txt  aff_e.txt  aff_h.txt  aff_i.txt  aff_k.txt  aff_last_param.txt  aff_o.txt  aff_q.txt  aff_w.txt  count_alen.txt  count_letters.txt  even.txt  ft_itoa.txt  ft_range.txt  ft_star.txt  ft_strlen.txt  inter.txt  is_palindrome.txt  maff_revalpha.txt  nth_char.txt  occ_a.txt  odd.txt  rev_print.txt  rle.txt  sort_list.txt  str_maxlenoc.txt  wdmatch.txt  write_string.txt
exercises_subs2/: aff_first_param.txt  aff_i.txt  aff_j.txt  aff_last_param.txt  aff_n.txt  aff_u.txt  aff_y.txt  base16.txt  count_alpha.txt  (+23 more)
(+2 files in other folders)
